# hierarchical-learned-pathfinding

./: .gitignore  LICENSE  README.md  pyproject.toml
baselines/: astar.py  dijkstra.py
checkpoints/: best.pt  best_dfs_maze.pt  best_random_scatter.pt  best_random_scatter_v2.pt  best_recursive_division.pt  best_rooms.pt  best_spiral.pt  final.pt  final_dfs_maze.pt  final_random_scatter.pt  final_recursive_division.pt  final_rooms.pt  final_spiral.pt
configs/: default.yaml
hlp/: composition.py  config.py  decomposition.py  extraction.py  grid.py  pipeline.py  tropical.py
hlp/neural/: dataset.py  losses.py  model.py  train.py
idea/: extention-ideas  extention-ideas.md  idea-doc.md  impl-doc-v2.md  impl-doc.md
saved_checkpoints/v1-random-scatter/: best.pt  final.pt
saved_checkpoints/v2-diverse-maps/: best.pt
saved_checkpoints/v3-edge-perm-temp/: best.pt
scripts/: benchmark.py  run_ui.py  train.py
tests/: test_composition.py  test_decomposition.py  test_extraction.py  test_grid.py  test_neural.py  test_pipeline.py  test_tropical.py
ui/: __main__.py  app.py  components.py  grid_view.py  map_generators.py  theme.py
